- `:config-diff` now has an `--include-hidden` flag, which also shows
  internally-set settings.
- Improved error messages when `:spawn` can't find an executable.
- When a process fails, the error message now suggests using `:process PID` with
  the correct PID (rather than always showing the latest process, which might not
  be the failing one)

Fixed
~~~~~

- When the devtools are clicked but `input.insert_mode.auto_enter` is set to
  `false`, insert mode now isn't entered anymore.
- The search wrapping messages are now correctly displayed in (hopefully) all
  cases with QtWebEngine.
- When a message with the same text as a currently already displayed one gets
  shown, qutebrowser used to only show one message. This is now only done when the
  two messages are completely equivalent (text, level, etc.) instead of doing so
  when only the text matches.
- The `progress` and `backforward` statusbar widgets now stay removed if you
  choose to remove them. Previously they would appear again on navigation.
- Rare crash when running userscripts with crashed renderer processes.
- Multiple rare crashes when quitting qutebrowser.
- The `asciidoc2html.py` script now correctly uses the virtualenv-installed
  asciidoc rather than requiring a system-wide installation.
- Crash with some notification servers when the server is quitting.
- Crash when using QtWebKit with PAC and the file has an invalid encoding.

[[v2.5.4]]
v2.5.4 (2023-03-13)
-------------------

Fixed
~~~~~

- Support SQLite with DQS (double quoted string) compile time option turned
  off.

[[v2.5.3]]
v2.5.3 (2023-02-17)
-------------------

Added
~~~~~

- New `array_at` quirk, polyfilling the
  https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Array/at[`Array.at` method],
  which is needed by various websites, but only natively available with Qt 6.2.

Fixed
~~~~~

- Crash when the adblock filter file can't be read.